2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* t-link.c (output_debug): New declaration.

2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): When checking for overflow, be careful to
	correctly cast the results.

2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* activity.c (activity_destroy): Clear VICTIM->SIBLING_NEXT.TYPE
	and VICTIM->SIBLING_PREV.TYPE.  Add additional asserts.

2007-12-10  Neal H. Walfield  <neal@gnu.org>

	* object.h (lru_lock): New declaration.
	(LINK_TEMPLATE): Assert that LRU_LOCK is held.
	(object_desc_disown_simple): Likewise.
	(object_disown_simple): Likewise.
	(object_desc_disown): Likewise.
	(object_disown): Likewise.
	(object_desc_claim): Likewise.
	(object_claim): Likewise.
	* object.c (lru_lock): Define.
	(memory_object_alloc): Lock LRU_LOCK when manipulating
	the LRU lists.
	(memory_object_destroy): Likewise.
	(object_find_soft): Likewise.
	(folio_free): Likewise.
	(folio_object_alloc): Likewise.
	* activity.c (activity_destroy): Lock LRU_LOCK when manipulating
	the LRU lists.
	(activity_destroy): Likewise.
	(activity_dump): Likewise.
	(activity_consistency_check_): Assert that LRU_LOCK is held.
	* ager.c (ager_loop): Lock LRU_LOCK when manipulating the LRU
	lists.
	* Makefile.am (t_link_CPPFLAGS): Include
	$(srcdir)/t-environment.h.
	(t_link_SOURCES): Add output.h, output.c and output-stdio.c.
	* t-environment.h: Move includes down.
	(environment_kip) [! _L4_TEST_MAIN]: Don't define, only declare.
	Remove static qualifier.
	(environment_api_version) [! _L4_TEST_MAIN]: Likewise.
	(environment_api_flags) [! _L4_TEST_MAIN]: Likewise.
	(environment_kernel_id) [! _L4_TEST_MAIN]: Likewise.
	(environment_utcb) [! _L4_TEST_MAIN]: Likewise.
	(environment_utcb_address) [! _L4_TEST_MAIN]: Likewise.
	(environment_init): Initialize
	ENVIRONMENT_UTCB_ADDRESS[_L4_UTCB_MY_GLOBAL_ID] to a non-NULL
	value.
	* t-link.c: Include "t-environment.h".
	(_L4_TEST_MAIN): Define.
	(program_name): Don't define.
	(lru_lock): Define.